2013-11-16  Andy Buckley  <andy.buckley@cern.ch>

	* Merging in code tiding changes from hg branch.

2013-10-16 Witek Pokorski

	* Conversion to Git version control (no code change)

2013-03-25  Lynn Garren

	* HepMC/HeavyIon.h: add centrality (defaults to zero)
	* HepMC/HepMCDefs.h: define HEPMC_HEAVY_ION_HAS_CENTRALITY
	* working release number is 2.07.00.a01

  --------------------------  HepMC-2.06.09  --------------------------

2012-06-05  Lynn Garren

     * configure.ac: explicitly disallow using configure with VC++
     * INSTALL*: improve build instructions

  --------------------------  HepMC-2.06.08  --------------------------

2012-02-16  Lynn Garren

     * src/GenEventStreamIO.cc: make sure we check the stream units
       if there is no unit line in the event header
     * test/testHepMC.cc.in: verify unit behavior

2012-02-10  Lynn Garren

     * cmake/Modules/HepMCVariables.cmake: deal with Windows

     * HepMC/GenEvent.h: add define_units()

  --------------------------  HepMC-2.06.07  --------------------------

2012-01-09  Lynn Garren

     * remove all VCMakefile.in files
     * Use cmake to build for Windows
     * cmake is now the preferred build method

2012-01-05  Lynn Garren

     * src/GenEvent.cc: fix a typo in error report for GenEvent::use_length_unit

     * examples/pythia8: add main31 and main32 from pythia8

2012-01-05  Lynn Garren

     * GenParticle.h, GenVertex.h, PdfInfo.h, SimpleVector.h, SimpleVector.icc:
       Rename local variables to avoid shadowing class variables.
       This problem surfaces when compiling with -Wshadow.

  --------------------------  HepMC-2.06.06  --------------------------

2011-11-09  Lynn Garren

     * add the ability to build with cmake
     * defs.h is neither created nor installed when building with cmake

2011-11-01  Lynn Garren

     * examples: move Pythia and Herwig examples to examples/fio

2011-10-31  Lynn Garren

     * remove fio/PythiaWrapper.cc